# dros

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: guardrails.yml
backend/: Dockerfile  __init__.py
backend/app/: __init__.py  auth.py  dependencies.py  main.py  object_store.py  settings.py
backend/scripts/: check_architecture.py  check_vocabulary.py  export_frontend_contracts.py  export_json_schemas.py
contracts/agents/: analysis-agent-request.schema.json  analysis-agent-response.schema.json  search-agent-request.schema.json  search-agent-response.schema.json  verifier-agent-request.schema.json  verifier-agent-response.schema.json  writing-agent-request.schema.json  writing-agent-response.schema.json
contracts/events/: analysis-run-failed.schema.json  analysis-run-requested.schema.json  analysis-run-succeeded.schema.json  artifact-created.schema.json  assertion-created.schema.json  (+9 more)
docs/: api-contracts.md  core-data-model.md  event-contracts.md  event-sequences.md  fastapi-route-catalog.md  glossary.md  implementation-status.md  local-deployment.md  module-boundaries.md  product-architecture.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
sql/: ddl_research_ledger_v2.sql
tests/: conftest.py  test_api_flow.py  test_auth.py  test_contract_boundaries.py  test_frontend_contracts.py  test_gateway_sse.py  test_guardrails.py  test_ncbi_adapter.py  test_rowlevel_sync.py
(+189 files in other folders)
