[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dros-control-plane"
version = "0.1.0"
description = "DR-OS control plane skeleton with in-memory ledger backend"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "pydantic>=2.11,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "psycopg_pool>=3.2,<4.0",
  "uvicorn>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
